// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Should correctly render ExpensesSummary with multiple expenses 1`] = `
<div>
  <h4>
     Viewing 
    31
     
    expenses
    expenses totalling 
    $2,355.55
  </h4>
</div>
`;

exports[`Should correctly render ExpensesSummary with one expense 1`] = `
<div>
  <h4>
     Viewing 
    1
     
    expense
    expenses totalling 
    $2.35
  </h4>
</div>
`;
